--- a/css/base.scss
+++ b/css/base.scss
@@ -6,6 +6,7 @@
 body {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   margin: 0;
+  color: #121212;
   -webkit-font-smoothing: antialiased;
 }
 
